--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,15 +1,105 @@
-header
-{
-    h1
+
+@mixin background {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}  
+
+// set body
+
+    body
     {
-        color: red;
-        font-size: large;
-        font-weight: 100;
+        margin-left: 25%;
+        margin-right: 25%;
+        margin-top: 10%;
+        margin-bottom: 10%;
+    
+        background-image: url(https://iphonesoft.fr/images/_082019/fond-ecran-dynamique-macos-wallpaper-club.jpg);
+        @include background();
+    
+    
     }
-}
+ 
+//add grid
 
-html
-{
-    font-size: (12/16) * 1px;
-}
+    .vcard
+    {
+        border: 10px solid gray;
+        padding: 2%;
+        display: grid;
+        grid-template-columns: 60% 40%;
+        grid-template-rows: 200px 1fr 50px;
+        background-image: url(https://img.freepik.com/vecteurs-libre/gros-plan-marbre-blanc-fond-texture_53876-58927.jpg?size=626&ext=jpg);
+        @include background();
+    }
+ 
+//img size
 
+    .bryan-rasamizafy
+    {
+        width: 200px;
+        height: 200px;
+        border: 5px solid gray;  
+    }
+
+//icon size
+
+    img
+    {
+        width: 20px;
+        height: 20px;
+    }
+
+//arrangement of blocks
+
+    .photo
+    {
+        grid-column: 1;
+        grid-row: 1;
+    }
+    
+    .aboutme
+    {
+        grid-column: 2;
+        grid-row: 1;
+        margin-left: 10%;
+        margin-right: 0px;  
+    }
+    
+    p
+    {
+        font-size: 20px;
+        margin-top: 20px;
+    }
+       
+    h2
+    {
+        font-size: 25px;
+    }
+    
+    .name
+    {
+        grid-column: 1;
+        grid-row: 2 ; 
+        margin-top: 5%;      
+        h1 {font-size: 50px;}
+    }
+    
+    .coordonnées
+    {
+        grid-column: 2;
+        grid-row: 2; 
+        line-height: 40px;
+        margin-left: 10%;
+        img {margin-right: 20px;}   
+    }
+
+    .reseaux
+    {
+        grid-column: 1 / span 2;
+        grid-row: 3;
+        text-align: center;
+        margin-top: 10px;
+        li {display: inline-block;
+            margin-left: 5%;}   
+    }
