--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,25 +33,24 @@ img {
   grid-column: 1;
   grid-row: 1; }
 
+.name {
+  grid-column: 1;
+  grid-row: 2;
+  margin-top: 10%; }
+  .name h1 {
+    font-size: 50px; }
+
 .aboutme {
   grid-column: 2;
   grid-row: 1;
   margin-left: 10%;
   margin-right: 0px; }
-
-p {
-  font-size: 20px;
-  margin-top: 20px; }
+  .aboutme p {
+    font-size: 20px;
+    margin-top: 20px; }
 
 h2 {
   font-size: 25px; }
-
-.name {
-  grid-column: 1;
-  grid-row: 2;
-  margin-top: 5%; }
-  .name h1 {
-    font-size: 50px; }
 
 .coordonnées {
   grid-column: 2;
@@ -64,8 +63,12 @@ h2 {
 .reseaux {
   grid-column: 1 / span 2;
   grid-row: 3;
-  text-align: center;
-  margin-top: 10px; }
-  .reseaux li {
-    display: inline-block;
-    margin-left: 5%; }
+  margin-top: auto; }
+  .reseaux ul {
+    text-align: center; }
+    .reseaux ul li {
+      display: inline-block;
+      margin-left: 5%; }
+      .reseaux ul li a :hover {
+        width: 40px;
+        height: 40px; }
